--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "coplay",
+  "name": "sgu_coplay",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "controlVideoClient.js",
   "dependencies": {
     "abbrev": "^1.1.1",
-    "accepts": "^1.3.7",
+    "accepts": "^1.3.8",
     "after": "^0.8.2",
     "ansi-align": "^3.0.0",
     "ansi-regex": "^4.1.0",
     "ansi-styles": "^3.2.1",
-    "anymatch": "^3.1.1",
+    "anymatch": "^3.1.3",
     "array-flatten": "^1.1.1",
     "arraybuffer.slice": "^0.0.7",
     "async": "^0.9.2",
@@ -20,15 +20,16 @@
     "base64id": "^2.0.0",
     "binary-extensions": "^2.0.0",
     "blob": "^0.0.5",
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.20.1",
     "boxen": "^4.2.0",
     "brace-expansion": "^1.1.11",
     "braces": "^3.0.2",
-    "bytes": "^3.1.0",
+    "bytes": "^3.1.2",
     "cacheable-request": "^6.1.0",
+    "call-bind": "^1.0.2",
     "camelcase": "^5.3.1",
     "chalk": "^2.4.2",
-    "chokidar": "^3.4.0",
+    "chokidar": "^3.5.3",
     "ci-info": "^2.0.0",
     "cli-boxes": "^2.2.0",
     "clone-response": "^1.0.2",
@@ -39,7 +40,7 @@
     "component-inherit": "^0.0.3",
     "concat-map": "^0.0.1",
     "configstore": "^5.0.1",
-    "content-disposition": "^0.5.3",
+    "content-disposition": "^0.5.4",
     "content-type": "^1.0.4",
     "cookie": "^0.4.0",
     "cookie-signature": "^1.0.6",
@@ -65,19 +66,24 @@
     "escape-string-regexp": "^1.0.5",
     "etag": "^1.8.1",
     "express": "^4.18.2",
-    "filelist": "^1.0.1",
+    "filelist": "^1.0.4",
     "fill-range": "^7.0.1",
-    "finalhandler": "^1.1.2",
+    "finalhandler": "^1.2.0",
     "forwarded": "^0.1.2",
     "fresh": "^0.5.2",
+    "function-bind": "^1.1.1",
+    "get-intrinsic": "^1.2.1",
     "get-stream": "^4.1.0",
-    "glob-parent": "^5.1.1",
+    "glob-parent": "^5.1.2",
     "global-dirs": "^2.0.1",
     "got": "^9.6.0",
     "graceful-fs": "^4.2.4",
+    "has": "^1.0.3",
     "has-binary2": "^1.0.3",
     "has-cors": "^1.1.0",
     "has-flag": "^3.0.0",
+    "has-proto": "^1.0.1",
+    "has-symbols": "^1.0.3",
     "has-yarn": "^2.1.0",
     "http-cache-semantics": "^4.1.0",
     "http-errors": "^1.7.2",
@@ -102,26 +108,29 @@
     "is-typedarray": "^1.0.0",
     "is-yarn-global": "^0.3.0",
     "isarray": "^2.0.1",
-    "jake": "^10.8.2",
+    "jake": "^10.8.7",
     "json-buffer": "^3.0.0",
     "keyv": "^3.1.0",
     "latest-version": "^5.1.0",
     "lowercase-keys": "^1.0.1",
+    "lru-cache": "^6.0.0",
     "make-dir": "^3.1.0",
     "media-typer": "^0.3.0",
     "merge-descriptors": "^1.0.1",
     "methods": "^1.1.2",
     "mime": "^1.6.0",
-    "mime-db": "^1.44.0",
-    "mime-types": "^2.1.27",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
     "mimic-response": "^1.0.1",
-    "minimatch": "^3.0.4",
+    "minimatch": "^3.1.2",
     "minimist": "^1.2.5",
     "ms": "^2.0.0",
-    "negotiator": "^0.6.2",
+    "negotiator": "^0.6.3",
+    "nodemon": "^3.0.1",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
     "normalize-url": "^4.5.0",
+    "object-inspect": "^1.12.3",
     "on-finished": "^2.3.0",
     "once": "^1.4.0",
     "p-cancelable": "^1.1.0",
@@ -132,26 +141,28 @@
     "path-to-regexp": "^0.1.7",
     "picomatch": "^2.2.2",
     "prepend-http": "^2.0.0",
-    "proxy-addr": "^2.0.6",
+    "proxy-addr": "^2.0.7",
     "pstree.remy": "^1.1.8",
     "pump": "^3.0.0",
     "pupa": "^2.0.1",
-    "qs": "^6.7.0",
+    "qs": "^6.11.0",
     "range-parser": "^1.2.1",
-    "raw-body": "^2.4.0",
+    "raw-body": "^2.5.1",
     "rc": "^1.2.8",
-    "readdirp": "^3.4.0",
+    "readdirp": "^3.6.0",
     "registry-auth-token": "^4.1.1",
     "registry-url": "^5.1.0",
     "responselike": "^1.0.2",
-    "safe-buffer": "^5.1.2",
+    "safe-buffer": "^5.2.1",
     "safer-buffer": "^2.1.2",
     "semver": "^5.7.1",
     "semver-diff": "^3.1.1",
     "send": "^0.17.1",
-    "serve-static": "^1.14.1",
+    "serve-static": "^1.15.0",
     "setprototypeof": "^1.1.1",
+    "side-channel": "^1.0.4",
     "signal-exit": "^3.0.3",
+    "simple-update-notifier": "^2.0.0",
     "socket.io": "^2.5.0",
     "socket.io-adapter": "^1.1.2",
     "socket.io-client": "^2.5.0",
@@ -170,7 +181,7 @@
     "type-fest": "^0.8.1",
     "type-is": "^1.6.18",
     "typedarray-to-buffer": "^3.1.5",
-    "undefsafe": "^2.0.3",
+    "undefsafe": "^2.0.5",
     "unique-string": "^2.0.0",
     "unpipe": "^1.0.0",
     "update-notifier": "^4.1.0",
@@ -184,16 +195,14 @@
     "ws": "^7.4.6",
     "xdg-basedir": "^4.0.0",
     "xmlhttprequest-ssl": "^1.6.3",
+    "yallist": "^4.0.0",
     "yeast": "^0.1.2"
   },
   "scripts": {
-    "devStart": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  }
+  "license": "ISC"
 }
