--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,3 @@
 {
-    "liveServer.settings.port": 5501,
-    "cSpell.words": [
-        "ultralytics"
-    ]
+    "liveServer.settings.port": 5501
 }
